[package]
name = "stage_config"
version = "1.0.0"
authors = ["ThatNintendoNerd"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
smash = { git = "https://github.com/blu-dev/smash-rs.git" }
smash_stage = { path = "../smash_stage", features = ["serde"] }
hash40 = "1.1.0"
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api.git" }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.0"
walkdir = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
