[package]
name = "stage_config"
version = "1.0.1"
authors = ["ThatNintendoNerd"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
smash = { git = "https://github.com/blu-dev/smash-rs.git" }
smash_stage = { path = "../smash_stage", features = ["serde"] }
hash40 = "1.3.1"
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api.git" }
memchr = "2.7.4"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
toml = "0.8.19"
walkdir = "2.5.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
